--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,6 @@
 		<script src="js/services.js"></script>
 	</head>
 	<body ng-app="starter">
-		<ion-view></ion-view>
+		<ion-nav-view></ion-nav-view>
 	</body>
 </html>
